--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ wiki/encyclopedia/migrations/__pycache__/
 wiki/wiki/__pycache__/
 wiki/newpage/__pycache__/
 wiki/newpage/migrations/__pycache__/
+wiku/entries
 
